/*
 *
 */

2009-04-25 15:30 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
    * updated makefile

2009-04-25 15:27 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * include/wxhevtdefs.h
  * include/wxh.h
  * src/wxbase/events/wx_EvtHandler.cpp
  * src/wxbase/events/wxhEvtHandler.prg
    + add wxSocketEvent class

  * include/event.ch
    * defined wxEVT_SOCKET id

  * src/wxbase/networking/wx_SocketBase.cpp
    * code cleanup

2009-04-23 23:51 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * demos/dbExplorer/dbExplorer.prg
    * updated demo

  * src/common/wxhfuncs.prg
    * added Alert on wrong menu construction

  * src/hrbcompat/errorsys/wxherrorsys.prg
    * updated code

  * src/hrbcompat/tbrowse/wxhBrowseDbProvider.prg
    ! Checking for faulty display on empty Hash/Array data's

  * src/hrbcompat/tbrowse/wxhBrowse.prg
    * Changed mode of parameter sended to code block on columns
      Now in Hash/Array, the key/nIndex is sended as parameter 
      to the columns codeblock

  * src/wxbase/advctrls/wx_GridTableBase.cpp
    - removed unneeded wxTest() function

  * src/wxbase/app/wx_App.cpp
  * src/wxbase/app/wxhApp.prg
    + Added OnExit event

2009-04-22 02:22 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * demos/dbExplorer/dbExplorer.prg
    * updated demo

  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
    * added PARENT option to BEGIN BOXSIZER ... command
    ! Fixed stupid typo on wrong class creation for __wxh_StaticLine()

  * src/raddox/TTable.prg
    + added methods:
      + KeyVal
      + RecCount

  * src/wxbase/static/wx_StaticLine.cpp
    * code cleanup


2009-04-21 13:48 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * Notes
    * updated notes

2009-04-21 13:21 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * wxharbour.spec
    * updated version to 0.4.0 rev 0


2009-04-21 13:12 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.gcc